--- a/Valentine.html
+++ b/Valentine.html
@@ -27,7 +27,7 @@
   s31.638-47.49,14-69c-8.615-10.506-19.829-1.669-26,7.667c-3.619,5.474-4.667,12.667-4.667,12.667S160.637,12.315,150,29.333
   c-5,8-5.667,45.333,19.333,57C213.574,106.979,295.928,102.42,319,88"/>
 </svg>
-  <h1>UNTUK WANITA KESAYANGANKU FISAH🥰</h1>
+  <h1>UNTUK WANITA KESAYANGANKU</h1>
   <p>Di Hari Valentine ini, hatiku berbicara, dan suaranya adalah namamu. Selamat Hari Kasih Sayang, terima kasih telah menjadi bagian tak terpisahkan dalam hidupku.</p>
   <p>Setiap detik yang kita habiskan bersama, aku merasa beruntung memiliki orang sepertimu di sisiku. Setiap senyumanmu adalah cahaya terang yang mengakhiri hari-hariku. Bersama-sama, kita menciptakan kisah indah penuh cinta dan kebahagiaan.</p>
   <p>Terima kasih telah menjadi pelipur lara dalam kesedihan dan sumber kebahagiaan dalam suka cita. Bersama-sama, kita menghadapi liku-liku kehidupan dengan keberanian dan cinta yang semakin kuat setiap hari.</p>
@@ -36,7 +36,7 @@
   <h3>From Me Arifcode</h3>
 
   <!-- Foto di bawah teks -->
-  <img src="fisah.jpg" alt="Foto Pacar Anda">
+  <img src="foto pacar anda.jpg" alt="Foto Pacar Anda">
   
 </div>
 </body>
